--- a/code/themes/default/components/psk-button/psk-button.css
+++ b/code/themes/default/components/psk-button/psk-button.css
@@ -11,6 +11,12 @@
     color:white;
 }
 
+.btn.btn-invisible {
+    background-color: white;
+	padding: 0;
+	margin: 0;
+}
+
 .btn.btn-primary:focus,
 .btn.btn-primary:not(:disabled):not(.disabled):active ,
 .submit{
